Thu Jan 26 03:24:02 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/console/console.c (io_getch): default delegating method
	  for StringIO.  https://github.com/nobu/io-console/issues/4

	* ext/stringio/stringio.c: moved some methods to hidden modules.

Wed Jan 25 13:27:42 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_basename): ignore non-ascii extension in
	  different encoding, which cannot match.

	* file.c (rmext): no extension to strip if empty string.

	* file.c (rb_enc_path_next, rb_enc_path_skip_prefix)
	  (rb_enc_path_last_separator, rb_enc_path_end)
	  (ruby_enc_find_basename, ruby_enc_find_extname): encoding-aware
	  path handling functions.

	* file.c (rb_home_dir, file_expand_path, rb_realpath_internal)
	  (rb_file_s_basename, rb_file_dirname, rb_file_s_extname)
	  (rb_file_join): should respect the encodings of arguments than
	  file system encoding.  [ruby-dev:45145] [Bug #5919]

	* dir.c (check_dirname, ruby_glob0): ditto.

	* ext/pathname/pathname.c (path_sub_ext): ditto.

Tue Jan 24 14:20:42 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_iter_break_value): new function to break a block with
	  the value.  [ruby-dev:45132] [Feature #5895]

Tue Jan 24 12:58:41 2012  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* object.c (rb_Hash): add Kernel#Hash conversion method like
	  Array() or Float().  a patch from Run Paint Run Run.  Fix #3131

Tue Jan 24 11:38:05 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/common.rb (URI.encode_www_form_component): initialize on
	  requiring to support JRuby, which runs parallel multithreads.
	  [ruby-core:42222] [Bug #5925]

	* lib/uri/common.rb (URI.decode_www_form_component): initialize on

Mon Jan 23 20:33:11 2012  Jason Kay  <geniture@me.com>

	* lib/net/http.rb (Net::HTTP#connect): Writing entire packet at
	  once to avoid incomplete transmission.  Current code using
	  writeline was causing sub-optimal conversing with a proxy due to